--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,23 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Generate unique tag
+        id: generate-tag
+        run: |
+          TAG=$(date +"%Y%m%d%H%M%S")
+          echo "TAG=$TAG" >> $GITHUB_ENV
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:latest
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:latest \
+                       -t ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:${{ env.TAG }} \
+                       -f TemplateAPI/Dockerfile TemplateAPI
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:latest
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:${{ env.TAG }}
+
+      - name: Log image name
+        run: |
+          echo "Built and pushed image: ${{ vars.DOCKERHUB_USERNAME }}/agentic-api:${{ env.TAG }}"
