--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,7 @@ services:
     restart: always
     environment:
       - DOTNET_DATABASE_STRING=Host=db;Database=templateAPIdb;Username=cody;Password=123456abc;
+      - AI_TOKEN=loremtoken
     networks:
       - web
       - internal
