--- a/templated-react/package.json
+++ b/templated-react/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-oidc-context": "^3.3.0",
+    "react-router": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
