--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,11 +18,11 @@ services:
 
     
   api:  
-    image: codyhowl/agentic-api:build-16
+    image: codyhowl/agentic-api:build-23
     restart: always
     environment:
       - DOTNET_DATABASE_STRING=Host=db;Database=templateAPIdb;Username=cody;Password=123456abc;
-      - AI_TOKEN=loremtoken
+      - AI_TOKEN=${AI_TOKEN}
     networks:
       - web
       - internal
