--- a/TemplateAPI/Dockerfile
+++ b/TemplateAPI/Dockerfile
@@ -1,13 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
-# Copy the project files and restore
-COPY TemplateAPI/TemplateAPI.csproj ./TemplateAPI/TemplateAPI.csproj
-RUN dotnet restore TemplateAPI/TemplateAPI.csproj
-
 # Copy only the API project files into the build context (avoid copying host data_repo)
 # This keeps build artifacts small and prevents baking local `data_repo` into the image.
-COPY TemplateAPI/. ./TemplateAPI/
+COPY ./TemplateAPI/. ./TemplateAPI/
+RUN dotnet restore TemplateAPI/TemplateAPI.csproj
 
 # Publish the app
 RUN dotnet publish TemplateAPI/TemplateAPI.csproj -c Release -o /app/out
