renamed folders.. should have done that a while ago

--- a/AgentAPI/Dockerfile
+++ b/AgentAPI/Dockerfile
@@ -3,11 +3,11 @@ WORKDIR /src
 
 # Copy only the API project files into the build context (avoid copying host data_repo)
 # This keeps build artifacts small and prevents baking local `data_repo` into the image.
-COPY ./TemplateAPI/. ./TemplateAPI/
-RUN dotnet restore TemplateAPI/TemplateAPI.csproj
+COPY ./AgentAPI/. ./AgentAPI/
+RUN dotnet restore AgentAPI/TemplateAPI.csproj
 
 # Publish the app
-RUN dotnet publish TemplateAPI/TemplateAPI.csproj -c Release -o /app/out
+RUN dotnet publish AgentAPI/TemplateAPI.csproj -c Release -o /app/out
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
