--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   api:  
     build:
       context: .
-      dockerfile: ./TemplateAPI/Dockerfile
+      dockerfile: ./AgentAPI/Dockerfile
     restart: always
     environment:
       - DOTNET_DATABASE_STRING=Host=db;Database=templateAPIdb;Username=cody;Password=123456abc;
