--- a/agent-react/package.json
+++ b/agent-react/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-oidc-context": "^3.3.0",
     "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
