--- a/agent-react/package.json
+++ b/agent-react/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "dompurify": "^3.3.0",
+    "marked": "^17.0.1",
     "oidc-client-ts": "^3.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
