--- a/agent-react/package.json
+++ b/agent-react/package.json
@@ -16,6 +16,7 @@
     "oidc-client-ts": "^3.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-oidc-context": "^3.3.0",
     "react-router": "^7.9.5",
     "tailwindcss": "^4.1.17",
